replace right html page with wrong one

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <style type="text/css">
       body {
         padding-top: 250px;
-        background-image: url('bg.png'); 
+        background-image: url('img/bg.png'); 
       }
       .container {
         width: 750px;
@@ -31,7 +31,6 @@
         font-size: 30px;
         color: #050505;
         font-family: lucida sans unicode, tahoma, arial;
-
       }
      
     </style>
@@ -46,11 +45,11 @@
         <h2 id='myname'>Mustafa Paltun</h2>
         <p></p>
         <div id="social-icons">
-          <a href="https://twitter.com/mpaltun"><img src="twitter-logo-square-webtreatsetc.png" width="48" height="48" alt="Twitter" /></a>
-          <a href="http://www.linkedin.com/pub/mustafa-paltun/29/792/466"><img src="linkedin-logo-square2-webtreatsetc.png" width="48" height="48" alt="LinkedIn" /></a>
-          <a href="http://www.facebook.com/Justbeee"><img src="facebook-logo-square-webtreatsetc.png" width="48" height="48" alt="Facebook" /></a>
-          <a href="http://plus.google.com/111503210109970181156/"><img src="gmail-logo-square2-webtreatsetc.png" width="48" height="48" alt="Google+" /></a>
-
+          <a href="https://twitter.com/mpaltun"><img src="img/twitter.png" width="48" height="48" alt="Twitter" /></a>
+          <a href="http://www.linkedin.com/pub/mustafa-paltun/29/792/466"><img src="img/linkedin.png" width="48" height="48" alt="LinkedIn" /></a>
+          <a href="http://www.facebook.com/Justbeee"><img src="img/facebook.png" width="48" height="48" alt="Facebook" /></a>
+          <a href="http://plus.google.com/111503210109970181156/"><img src="img/g+.png" width="48" height="48" alt="Google+" /></a>
+          <!--<a href="http://github.com/Justbe"><img src="img/github.png" width="48" height="48" alt="Github" /></a>-->
         </div>
       </div>
 
