--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 
       .hero-unit {
         background-color: #484042;
+        opacity: 0.6;
+        -moz-opacity: 0.6;
+        filter:alpha(opacity=60);
       }
 
       h2#myname {
